src/test/resources/30/single/xhtml/invalid/obsolete-keygen.xhtml
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
  <head lang="en">
    <meta charset="UTF-8"/>
    <title>Document</title>
  </head>
  <body>
    <form action="processkey.cgi" method="post" enctype="multipart/form-data">
      <p><keygen name="key"></keygen></p>
      <p><input type="submit" value="Submit key..." /></p>
    </form>
  </body>
</html>